# cap-auto-editor

./: .gitignore  NEXT_STEPS.md  myavatar
acquisition/: pyproject.toml
acquisition/src/acquisition/: __init__.py  cli.py  contracts.py  orchestrator.py
acquisition/src/acquisition/providers/: hf.py  pexels.py  text_card.py
acquisition/tests/: test_orchestrator.py
analysis/: INTERFACE.md  pyproject.toml
analysis/src/analysis/: __init__.py  analyzer.py  cli.py  contracts.py  postprocess.py  prompts.py  validate.py
analysis/tests/: test_analyzer.py  test_contracts.py  test_postprocess.py  test_prompts.py  test_validators.py
analysis/tests/fixtures/: qwen_27B_real.json
auto_source/: pyproject.toml
auto_source/src/auto_source/: __init__.py  cli.py  contracts.py  orchestrator.py  recapture.py  searcher.py
auto_source/tests/: test_orchestrator.py  test_searcher.py
broll_matcher/: pyproject.toml
broll_matcher/src/broll_matcher/: __init__.py  cli.py  contracts.py  matcher.py
broll_matcher/tests/: test_matcher.py
broll_planner/: pyproject.toml
broll_planner/src/broll_planner/: __init__.py  cli.py  contracts.py  planner.py  prompts.py
broll_planner/tests/: test_planner.py
broll_resolver/: pyproject.toml
broll_resolver/src/broll_resolver/: __init__.py  cli.py  contracts.py  resolver.py
broll_resolver/tests/: test_resolver.py
capture/: INTERFACE.md  config.yaml  pyproject.toml
capture/src/capture/: __init__.py  cli.py  contracts.py  media_audit.py  media_downloader.py  orchestrator.py  url_normalizer.py
capture/src/capture/backends/: __init__.py  base.py  browser_sdk.py  http_direct.py
capture/src/capture/extractors/: __init__.py  media.py  text.py
capture/tests/: test_browser_sdk_settings.py  test_contracts.py  test_extractors.py  test_http_direct.py  test_media_audit.py  test_media_detector.py  test_media_downloader.py  test_progress.py  test_url_normalizer.py
compositor/: pyproject.toml
compositor/src/compositor/: __init__.py  adapter.py  builder.py  cli.py  render.py
compositor/tests/: test_adapter.py  test_builder.py  test_html.py  test_render.py
compositor_hf/: pyproject.toml
compositor_hf/src/compositor_hf/: cli.py  contracts.py  html.py
compositor_hf/tests/: test_builder.py  test_html.py  test_render.py
entity_enricher/: pyproject.toml
entity_enricher/src/entity_enricher/: __init__.py  browser_lookup.py  cache.py  cli.py  contracts.py  enricher.py  url_extractor.py
entity_enricher/tests/: test_browser_lookup.py  test_cache.py  test_enricher.py  test_url_extractor.py
hf_designer/: pyproject.toml
hf_designer/src/hf_designer/: __init__.py  cli.py  designer.py  mockup_prompt.md  render.py  slide_prompt.md
hf_designer/tests/: test_designer.py  test_render.py
llm/: INTERFACE.md  pyproject.toml
llm/src/llm/: __init__.py  claude_pool.py  contracts.py  deepseek.py  prompts.py  providers.py
llm/tests/: test_claude_pool.py  test_providers.py
pipeline/: INTERFACE.md  pyproject.toml
pipeline/src/pipeline/: __init__.py  cli.py  contracts.py  orchestrator.py  registry.py  tracer.py
pipeline/src/pipeline/descriptors/: __init__.py  acquisition.py  analysis.py  auto_source.py  broll_matcher.py  broll_planner.py  broll_resolver.py  capture.py  compositor.py  compositor_hf.py  entity_enricher.py  polish.py  script_finalizer.py  storyboard.py  subtitler.py  visual_inventory.py
pipeline/tests/: test_contracts.py  test_orchestrator.py  test_registry.py  test_tracer.py
polish/: INTERFACE.md  config.yaml  project_aliases.example.yaml  pyproject.toml  text_normalization_rules.yaml
polish/examples/: top2_sources.txt
polish/scripts/: phase2_demo.py  phase2b_demo.py
polish/src/polish/: __init__.py  contracts.py  cut_planner.py  entity_candidates.py  entity_resolution.py  project_aliases.py  remap.py  sources.py  text_normalizer.py  transcribe.py  transcript_patches.py
polish/src/polish/detectors/: __init__.py  filler.py  silence.py
polish/tests/: test_contracts.py  test_entity_candidates.py  test_normalizer.py  test_progress.py  test_remap.py  test_silence_adaptive.py  test_sources_from_manifest.py
progress/: INTERFACE.md  pyproject.toml
progress/src/progress/: __init__.py  contracts.py  emitter.py  parser.py
progress/tests/: test_emitter.py  test_parser.py
script_finalizer/: pyproject.toml
script_finalizer/src/script_finalizer/: __init__.py  balancer.py  cli.py  contracts.py  scorer.py
script_finalizer/tests/: test_balancer.py
storyboard/: pyproject.toml
storyboard/src/storyboard/: __init__.py  builder.py  cli.py  contracts.py
storyboard/tests/: test_builder.py
subtitler/: pyproject.toml
subtitler/src/subtitler/: __init__.py  builder.py  cli.py  contracts.py
subtitler/tests/: test_builder.py
viewer/: INTERFACE.md  pyproject.toml
viewer/src/viewer/: app.py  launcher.py
viewer/templates/: base.html  capture_index.html  capture_run.html  index.html  pipeline_index.html  pipeline_run.html  run.html
viewer/tests/: test_discovery_live.py  test_find_runs.py  test_formatters_v11.py  test_launcher.py  test_pipeline_discovery.py  test_pipeline_manifest_rendering.py
visual_inventory/: pyproject.toml
visual_inventory/src/visual_inventory/: __init__.py  cli.py  contracts.py  inventory.py  keyframe_extractor.py  vision_analyzer.py
visual_inventory/tests/: test_inventory.py  test_vision_analyzer.py
