[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broll_planner"
version = "0.1.0"
description = "Phase 8 of myavatar v6 — second-pass LLM that maps beats with visual_need to concrete broll_hints"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "analysis",
    "visual_inventory",
    "llm",
    "progress",
]

[project.scripts]
broll-planner = "broll_planner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/broll_planner"]
