[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compositor"
version = "0.1.0"
description = "Phase 14 of myavatar v6 — composes the final 1080x1920 MP4 from broll_plan + subtitles + audio via HyperFrames"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "progress",
]

[project.scripts]
compositor = "compositor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/compositor"]
