[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compositor"
version = "0.1.0"
description = "Phase 14 of myavatar v6 — CapCut export. Adapts v6 outputs to v4/agent4_builder visual_plan_resolved.json and produces an editable CapCut project."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "progress",
]

[project.scripts]
compositor = "compositor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/compositor"]
