[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hf_designer"
version = "0.1.0"
description = "v6 hf_designer — LLM-driven slide / mockup / kicker cards rendered via HyperFrames"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "llm",
    "progress",
]

[project.scripts]
hf-designer = "hf_designer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_designer"]

[tool.hatch.build.targets.wheel.force-include]
"src/hf_designer/slide_prompt.md" = "hf_designer/slide_prompt.md"
"src/hf_designer/mockup_prompt.md" = "hf_designer/mockup_prompt.md"
