[project]
name = "pipeline"
version = "1.0.0"
description = "Central orchestrator for myavatar v6 pipeline"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daniel Pérez Pinazo", email = "pitiflautico3@gmail.com"},
]
dependencies = [
    "pydantic>=2",
    "httpx",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
